<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="24dp"
        tools:context=".EmpDetail.EmpDetailActivity">

        <ImageView
            android:id="@+id/empPic"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/boy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivCamera"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:src="@android:drawable/ic_menu_camera"
            app:layout_constraintStart_toEndOf="@+id/empPic"
            app:layout_constraintTop_toTopOf="@+id/empPic" />

        <TextView
            android:id="@+id/tvTimestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Photo Captured Time"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/empPic" />

        <TextView
            android:id="@+id/tvNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/q_medium"
            android:text="@string/emp_name"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTimestamp" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/q_medium"
            android:text="@string/emp_name"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/tvNameLabel"
            app:layout_constraintTop_toBottomOf="@+id/tvNameLabel" />

        <TextView
            android:id="@+id/tvRoleLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/q_medium"
            android:text="@string/emp_role"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/tvNameLabel"
            app:layout_constraintTop_toBottomOf="@+id/tvName" />

        <TextView
            android:id="@+id/tvRole"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/q_medium"
            android:text="@string/emp_role"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/tvNameLabel"
            app:layout_constraintTop_toBottomOf="@+id/tvRoleLabel" />

        <TextView
            android:id="@+id/tvAddressLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/q_medium"
            android:text="@string/emp_address"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/tvNameLabel"
            app:layout_constraintTop_toBottomOf="@+id/tvRole" />

        <TextView
            android:id="@+id/tvAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/q_medium"
            android:text="@string/emp_address"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/tvNameLabel"
            app:layout_constraintTop_toBottomOf="@+id/tvAddressLabel" />

        <TextView
            android:id="@+id/tvSalaryLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/q_medium"
            android:text="@string/emp_salary"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/tvNameLabel"
            app:layout_constraintTop_toBottomOf="@+id/tvAddress" />

        <TextView
            android:id="@+id/tvSalary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/q_medium"
            android:text="@string/emp_salary"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/tvNameLabel"
            app:layout_constraintTop_toBottomOf="@+id/tvSalaryLabel" />

        <TextView
            android:id="@+id/tvJoinDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/q_medium"
            android:text="@string/emp_join_date"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/tvNameLabel"
            app:layout_constraintTop_toBottomOf="@+id/tvSalary" />

        <TextView
            android:id="@+id/tvJoinDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/q_medium"
            android:text="@string/emp_join_date"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/tvNameLabel"
            app:layout_constraintTop_toBottomOf="@+id/tvJoinDateLabel" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>